[gd_scene load_steps=11 format=3 uid="uid://8ap6pysvfqm4"]

[ext_resource type="Shader" path="res://menu/memu2.gdshader" id="1_kf7xq"]
[ext_resource type="Script" path="res://menu/memu.gd" id="1_ygedg"]
[ext_resource type="Shader" path="res://menu/memu.gdshader" id="3_4roty"]
[ext_resource type="Texture2D" uid="uid://by76l70bi733y" path="res://menu/menu_clouds1.png" id="3_s07af"]
[ext_resource type="Texture2D" uid="uid://c167atal1yniu" path="res://menu/menu_clouds2.png" id="5_uu7qc"]
[ext_resource type="Texture2D" uid="uid://bojh3grtxinur" path="res://images/logo.png" id="7_e7dtg"]
[ext_resource type="PackedScene" uid="uid://bbw52brc363ty" path="res://button.tscn" id="10_mdhwr"]
[ext_resource type="Texture2D" uid="uid://dwfjvxkryoi51" path="res://levels/level_01/images/pink_back.png" id="11_dhnaw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5m850"]
shader = ExtResource("1_kf7xq")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a2ix7"]
shader = ExtResource("3_4roty")

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ygedg")

[node name="MenuClouds1" type="Sprite2D" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_5m850")
position = Vector2(1369, 334)
scale = Vector2(2.58594, 2.58594)
texture = ExtResource("3_s07af")

[node name="MenuClouds3" type="Sprite2D" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_5m850")
position = Vector2(1409, 828)
scale = Vector2(2.58594, 2.58594)
texture = ExtResource("3_s07af")

[node name="MenuClouds2" type="Sprite2D" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_a2ix7")
position = Vector2(1152, 448)
scale = Vector2(2.5, 2.5)
texture = ExtResource("5_uu7qc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.522
anchor_top = 0.475
anchor_right = 0.522
anchor_bottom = 0.475
offset_left = -77.344
offset_top = 63.2
offset_right = 68.656
offset_bottom = 326.2
grow_horizontal = 2
grow_vertical = 2

[node name="Start" parent="VBoxContainer" instance=ExtResource("10_mdhwr")]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")

[node name="Opt" parent="VBoxContainer" instance=ExtResource("10_mdhwr")]
layout_mode = 2
text = "Options"

[node name="Credits" parent="VBoxContainer" instance=ExtResource("10_mdhwr")]
layout_mode = 2
text = "Credits"

[node name="Quit" parent="VBoxContainer" instance=ExtResource("10_mdhwr")]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Start")
text = "Quit"

[node name="Logo" type="Sprite2D" parent="VBoxContainer"]
position = Vector2(71, -156)
scale = Vector2(1.81132, 1.81132)
texture = ExtResource("7_e7dtg")

[node name="PinkBack" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(384, 161.708)
scale = Vector2(269.1, 224.939)
texture = ExtResource("11_dhnaw")

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Opt" to="." method="_on_opt_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
